src/css/custom.css
/* ... */
.row {
  display: flex;
  justify-content: space-between;
  padding: 0 24px;
  margin: 0 !important;
}

.menu {
  display: flex;
  flex-direction: column;
  gap: 40px;
  height: 100%;
}

.breadcrumbs {
  padding: 0 !important;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;
}

.breadcrumbs__item:first-child a {
  padding-left: 0;
}

.breadcrumbs__link {
  font-weight: 300;
  font-size: 12px;
  line-height: 16px;

  color: var(--color-black);
  border-radius: 6px;
}

.breadcrumbs__link:any-link:hover {
  color: #3F65C2;
  background-color: transparent;
}

.breadcrumbs__link svg {
  top: -1px !important;
}

.breadcrumbs__item--active .breadcrumbs__link {
  color: black;
  background-color: transparent;
  border: 1px solid black;
  border-radius: 6px;
  margin-left: 10px;
}

.breadcrumbs__item:not(:last-child):after {
  margin: 0;
  color: #B6B4B4;
  opacity: 1;
  filter: contrast(0.5) brightness(2);
}

.theme-doc-version-badge {
  display: none;
}

@media (max-width: 1600px) {
  aside {
    border-right: none !important;
    width: 320px !important;
  }

  .container {
    max-width: 100%;
  }

  .col {
    max-width: unset;
    padding: 0;
  }

  .desktop-sidebar-custom {
    width: 320px !important;
  }

  .menu__list_top_margin {
    margin-top: 24px;
  }

  article h1 {
    font-weight: bold;
    font-size: var(--font-size-desktop-3xlarge);

    color: var(--eos-color-darkest);
    margin: 0 !important;
    padding: 0 !important;
  }

  article h2 {
    font-weight: bold;
    font-size: var(--font-size-2xlarge);

    color: var(--eos-color-darkest);
    margin: 0 !important;
    padding: 0 !important;
  }

  article h3 {
    font-weight: bold;
    font-size: var(--font-size-xlarge);

    color: var(--eos-color-darkest);
    margin: 0 !important;
    padding: 0 !important;
  }

  article h4 {
    font-weight: bold;
    font-size: var(--font-size-large);

    color: var(--eos-color-darkest);
    margin: 0 !important;
    padding: 0 !important;
  }

  article h5 {
    font-weight: bold;
    font-size: var(--font-size-medium);

    color: var(--eos-color-darkest);
    margin: 0 !important;
    padding: 0 !important;
  }

  article h6 {
    font-weight: bold;
    font-size: var(--font-size-standard);

    color: var(--eos-color-darkest);
    margin: 0 !important;
    padding: 0 !important;
  }
}
/* ... */

